--- a/force-app/main/default/lwc/preRecordedTransactionEntry/preRecordedTransactionEntry.html
+++ b/force-app/main/default/lwc/preRecordedTransactionEntry/preRecordedTransactionEntry.html
@@ -24,6 +24,7 @@
         label="Category"
         onclick={handleCategoryClick}
         required
+        disabled
       ></lightning-input>
 
       <lightning-input label="Memo"></lightning-input>
